welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:16: error: Unmatched closing brace '}' ignored here
 }
 ^